[BACKEND] handled concurrency for booking tickets and making the application stable